gen/SPEX_Util.h


typedef enum
{
    SPEX_OK = 0,                
    SPEX_OUT_OF_MEMORY = -1,    
    SPEX_SINGULAR = -2,         
    SPEX_INCORRECT_INPUT = -3,  
    SPEX_INCORRECT = -4,        
    SPEX_UNSYMMETRIC = -5,      
    SPEX_PANIC = -6             
}
SPEX_info ;
typedef enum
{
    SPEX_SMALLEST = 0,      
    SPEX_DIAGONAL = 1,      
    SPEX_FIRST_NONZERO = 2, 
    SPEX_TOL_SMALLEST = 3,  
    SPEX_TOL_LARGEST = 4,   
    SPEX_LARGEST = 5        
}
SPEX_pivot ;
typedef enum
{
    SPEX_NO_ORDERING = 0,   
    SPEX_COLAMD = 1,        
    SPEX_AMD = 2            
}
SPEX_col_order ;
typedef struct SPEX_options
{
    SPEX_pivot pivot ;     
    SPEX_col_order order ; 
    double tol ;           
    int print_level ;      
    int32_t prec ;         
    mpfr_rnd_t round ;     
    bool check ;           
} SPEX_options ;
SPEX_info SPEX_create_default_options (SPEX_options **option) ;
typedef enum
{
    SPEX_CSC = 0,           
    SPEX_TRIPLET = 1,       
    SPEX_DENSE = 2          
}
SPEX_kind ;
typedef enum
{
    SPEX_MPZ = 0,           
    SPEX_MPQ = 1,           
    SPEX_MPFR = 2,          
    SPEX_INT64 = 3,         
    SPEX_FP64 = 4           
}
SPEX_type ;
typedef struct
{
    int64_t m ;         
    int64_t n ;         
    int64_t nzmax ;     
    int64_t nz ;        
    SPEX_kind kind ;    
    SPEX_type type ;    
    int64_t *p ;        
    bool p_shallow ;    
    int64_t *i ;        
    bool i_shallow ;    
    int64_t *j ;        
    bool j_shallow ;    
    union               
    {
        mpz_t *mpz ;            
        mpq_t *mpq ;            
        mpfr_t *mpfr ;          
        int64_t *int64 ;        
        double *fp64 ;          
    } x ;
    bool x_shallow ;    
    mpq_t scale ;       
} SPEX_matrix ;
SPEX_info SPEX_matrix_allocate
(
    SPEX_matrix **A_handle, 
    SPEX_kind kind,         
    SPEX_type type,         
    int64_t m,              
    int64_t n,              
    int64_t nzmax,          
    bool shallow,           
    bool init,              
    const SPEX_options *option
) ;
SPEX_info SPEX_matrix_free
(
    SPEX_matrix **A_handle, 
    const SPEX_options *option
) ;
SPEX_info SPEX_matrix_nnz     
(
    int64_t *nnz,              
    const SPEX_matrix *A,      
    const SPEX_options *option
) ;
SPEX_info SPEX_matrix_copy
(
    SPEX_matrix **C_handle, 
    SPEX_kind C_kind,       
    SPEX_type C_type,       
    SPEX_matrix *A,         
    const SPEX_options *option
) ;
typedef struct
{
    int64_t *q ;    
    int64_t lnz ;   
    int64_t unz ;   
} SPEX_LU_analysis ;
SPEX_info SPEX_LU_analysis_free        
(
    SPEX_LU_analysis **S, 
    const SPEX_options *option
) ;
SPEX_info SPEX_LU_analyze
(
    SPEX_LU_analysis **S, 
    const SPEX_matrix *A, 
    const SPEX_options *option  
) ;
void *SPEX_calloc
(
    size_t nitems,      
    size_t size         
) ;
void *SPEX_malloc
(
    size_t size        
) ;
void SPEX_free
(
    void *p         
) ;
void *SPEX_realloc      
(
    int64_t nitems_new,     
    int64_t nitems_old,     
    size_t size_of_item,    
    void *p,                
    bool *ok                
) ;
SPEX_info SPEX_initialize (void) ;
SPEX_info SPEX_initialize_expert
(
    void* (*MyMalloc) (size_t),             
    void* (*MyCalloc) (size_t, size_t),     
    void* (*MyRealloc) (void *, size_t),    
    void  (*MyFree) (void *)                
) ;
SPEX_info SPEX_finalize (void) ;
SPEX_info SPEX_matrix_check     
(
    const SPEX_matrix *A,       
    const SPEX_options* option  
) ;
SPEX_info SPEX_matrix_div 
(
    SPEX_matrix **x2_handle,    
    SPEX_matrix* x,             
    const mpz_t scalar,         
    const SPEX_options *option
) ;
SPEX_info SPEX_matrix_mul   
(
    SPEX_matrix *x,         
    const mpz_t scalar      
) ;
SPEX_info SPEX_check_solution
(
    const SPEX_matrix *A,          
    const SPEX_matrix *x,          
    const SPEX_matrix *b,          
    const SPEX_options* option           
);
SPEX_info SPEX_cumsum
(
    int64_t *p,          
    int64_t *c,          
    int64_t n           
);
SPEX_info SPEX_mpz_init (mpz_t x) ;
SPEX_info SPEX_mpz_init2(mpz_t x, const size_t size) ;
SPEX_info SPEX_mpz_set (mpz_t x, const mpz_t y) ;
SPEX_info SPEX_mpz_set_ui (mpz_t x, const uint64_t y) ;
SPEX_info SPEX_mpz_set_si (mpz_t x, const int64_t y) ;
SPEX_info SPEX_mpz_get_d (double *x, const mpz_t y) ;
SPEX_info SPEX_mpz_get_si (int64_t *x, const mpz_t y) ;
SPEX_info SPEX_mpz_set_q (mpz_t x, const mpq_t y) ;
SPEX_info SPEX_mpz_mul (mpz_t a, const mpz_t b, const mpz_t c) ;
SPEX_info SPEX_mpz_submul (mpz_t x, const mpz_t y, const mpz_t z) ;
SPEX_info SPEX_mpz_divexact (mpz_t x, const mpz_t y, const mpz_t z) ;
SPEX_info SPEX_mpz_gcd (mpz_t x, const mpz_t y, const mpz_t z) ;
SPEX_info SPEX_mpz_lcm (mpz_t lcm, const mpz_t x, const mpz_t y) ;
SPEX_info SPEX_mpz_abs (mpz_t x, const mpz_t y) ;
SPEX_info SPEX_mpz_cmp (int *r, const mpz_t x, const mpz_t y) ;
SPEX_info SPEX_mpz_cmpabs (int *r, const mpz_t x, const mpz_t y) ;
SPEX_info SPEX_mpz_cmp_ui (int *r, const mpz_t x, const uint64_t y) ;
SPEX_info SPEX_mpz_sgn (int *sgn, const mpz_t x) ;
SPEX_info SPEX_mpz_sizeinbase (size_t *size, const mpz_t x, int64_t base) ;
SPEX_info SPEX_mpq_init (mpq_t x) ;
SPEX_info SPEX_mpq_set (mpq_t x, const mpq_t y) ;
SPEX_info SPEX_mpq_set_z (mpq_t x, const mpz_t y) ;
SPEX_info SPEX_mpq_set_d (mpq_t x, const double y) ;
SPEX_info SPEX_mpq_set_ui (mpq_t x, const uint64_t y, const uint64_t z) ;
SPEX_info SPEX_mpq_set_si (mpq_t x, const int64_t y, const uint64_t z) ;
SPEX_info SPEX_mpq_set_num (mpq_t x, const mpz_t y) ;
SPEX_info SPEX_mpq_set_den (mpq_t x, const mpz_t y) ;
SPEX_info SPEX_mpq_get_den (mpz_t x, const mpq_t y) ;
SPEX_info SPEX_mpq_get_d (double *x, const mpq_t y) ;
SPEX_info SPEX_mpq_abs (mpq_t x, const mpq_t y) ;
SPEX_info SPEX_mpq_add (mpq_t x, const mpq_t y, const mpq_t z) ;
SPEX_info SPEX_mpq_mul (mpq_t x, const mpq_t y, const mpq_t z) ;
SPEX_info SPEX_mpq_div (mpq_t x, const mpq_t y, const mpq_t z) ;
SPEX_info SPEX_mpq_cmp (int *r, const mpq_t x, const mpq_t y) ;
SPEX_info SPEX_mpq_cmp_ui (int *r, const mpq_t x,
                    const uint64_t num, const uint64_t den) ;
SPEX_info SPEX_mpq_sgn (int *sgn, const mpq_t x) ;